--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,60 @@
 @import url("../fonts/glyphicons-halflings-regular.woff2");
+
+body{
+  height: 5000px;
+}
+
+h1{
+
+}
+
+.block{
+  background: purple;
+  height: 100px;
+}
+
+span{
+  display: inline-block;
+
+}
+
+.parent{
+  width: 500px;
+  height: 500px;
+  background: yellow;
+  position: relative;
+  left: 200px;
+}
+
+.child{
+  width: 100px;
+  height: 100px;
+  background: black;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+section{
+  height: 100px;
+  background: orange;
+  border: 1px solid black;
+}
+
+.one, .two{
+  height: 200px;
+  width: 200px;
+  background: tomato;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 768px){
+  .one{
+    border-radius: 50%;
+    background: purple;
+  }
+
+  .two{
+    background: black;
+  }
+}
