--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,44 @@
 @import url("../fonts/glyphicons-halflings-regular.woff2");
+
+
+.parent{
+  width: 100%;
+  height: 100%;
+  background: grey;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: space-around;
+  align-content: center;
+
+}
+
+.child > *{
+  display: inline;
+}
+
+.child{
+  border: 1px solid black;
+  font-size: 3em;
+  color: white;
+  width: 100px;
+  height: 100px;
+  background: tomato;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.grandchild{
+
+}
+
+.half{
+  height: 50px;
+}
+
+.quarter{
+  height: 25px;
+}
